修正静态资源路径

--- a/src/main/resources/templates/spaceX.html
+++ b/src/main/resources/templates/spaceX.html
@@ -54,7 +54,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 13 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-3.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-3.svg);*/
             background-size: 100% 100%;
         }
 
@@ -194,7 +194,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-8.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-8.svg);*/
             background-size: 100% 100%;
         }
 
@@ -213,7 +213,7 @@
             height: calc( 52 / 940 * 100vh);
             top: calc( 106 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-3.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-3.svg);*/
             background-size: 100% 100%;
         }
 
@@ -292,7 +292,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 13 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-7.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-7.svg);*/
             background-size: 100% 100%;
         }
 
@@ -410,7 +410,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke.svg);*/
             background-size: 100% 100%;
         }
 
@@ -420,7 +420,7 @@
             height: calc( 52 / 940 * 100vh);
             top: calc( 106 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-4.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-4.svg);*/
             background-size: 100% 100%;
         }
 
@@ -532,7 +532,7 @@
             height: calc( 106 / 940 * 100vh);
             top: calc( 17 / 940 * 100vh);
             left: calc( 11 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-6.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-6.svg);*/
             background-size: 100% 100%;
         }
 
@@ -622,7 +622,7 @@
             height: calc( 106 / 940 * 100vh);
             top: calc( 17 / 940 * 100vh);
             left: calc( 11 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke.svg);*/
             background-size: 100% 100%;
         }
 
@@ -1284,7 +1284,7 @@
             height: calc( 167 / 940 * 100vh);
             top: -55px;
             left: -57px;
-            background-image: url(apps/wenhao-javaw/spaceXImg/container.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/container.svg);*/
             background-size: 100% 100%;
         }
 
@@ -1355,7 +1355,7 @@
             height: calc( 167 / 940 * 100vh);
             top: -55px;
             left: -57px;
-            background-image: url(apps/wenhao-javaw/spaceXImg/container-2.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/container-2.svg);*/
             background-size: 100% 100%;
         }
 
@@ -1557,7 +1557,7 @@
             height: calc( 27 / 940 * 100vh);
             top: calc( 2 / 940 * 100vh);
             left: calc( 2 / 1568 * 100vw);
-            background-image: url(apps/wenhao-javaw/spaceXImg/vector.svg);
+            /*background-image: url(apps/wenhao-javaw/spaceXImg/vector.svg);*/
             background-size: 100% 100%;
         }
 
@@ -1653,7 +1653,7 @@
                 </div>
                 <div class="fill-ring">
                     <div class="overlap-group">
-                        <img class="fill-ring-stroke" src="apps/wenhao-javaw/spaceXImg/fill-ring-stroke-2.svg" />
+<!--                        <img class="fill-ring-stroke" src="apps/wenhao-javaw/spaceXImg/fill-ring-stroke-2.svg" />-->
                         <div class="rectangle-2"></div>
                         <div class="rectangle-3"></div>
                         <div class="rectangle-4"></div>
@@ -1726,7 +1726,7 @@
                 <div class="container-2"></div>
                 <div class="overlap-group-wrapper">
                     <div class="overlap-group-3">
-                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-2.svg" />
+<!--                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-2.svg" />-->
                         <div class="rectangle-13"></div>
                         <div class="rectangle-14"></div>
                     </div>
@@ -1746,7 +1746,7 @@
                 <div class="container-2"></div>
                 <div class="overlap-group-wrapper">
                     <div class="overlap-group-3">
-                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-5.svg" />
+<!--                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-5.svg" />-->
                         <div class="rectangle-13"></div>
                         <div class="rectangle-14"></div>
                     </div>
@@ -1784,7 +1784,7 @@
                 <div class="container-2"></div>
                 <div class="div-wrapper">
                     <div class="overlap-group-4">
-                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-4.svg" />
+<!--                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-4.svg" />-->
                         <div class="rectangle-19"></div>
                         <div class="rectangle-20"></div>
                         <div class="rectangle-21"></div>
@@ -1817,7 +1817,7 @@
         <div class="text-wrapper-24">Connected</div>
         <div class="text-wrapper-25">Wing</div>
         <div class="text-wrapper-26">Connected</div>
-        <img class="divider" src="apps/wenhao-javaw/spaceXImg/divider.svg" />
+<!--        <img class="divider" src="apps/wenhao-javaw/spaceXImg/divider.svg" />-->
     </div>
     <div class="text-wrapper-27">VEHICLE OVERVIEW</div>
     <div class="LHS-pane">
@@ -1952,6 +1952,7 @@
                     <div class="text-wrapper-41">Mech</div>
                     <div class="icon-5">
                         <div class="ellipse-wrapper"><div class="ellipse"></div></div>
+                        <img class="icon-5" src="apps/wenhao-javaw/spaceXImg/vector.svg" />
                     </div>
                 </div>
                 <div class="GNC">
