--- a/src/main/resources/static/apps/wenhao-javaw/2048/style/helpers.scss
+++ b/src/main/resources/static/apps/wenhao-javaw/2048/style/helpers.scss
@@ -54,15 +54,15 @@
 
 // Keyframe animations
 @mixin keyframes($animation-name) {
-  @-webkit-keyframes $animation-name {
-    @content;
-  }
-  @-moz-keyframes $animation-name {
-    @content;
-  }
-  @keyframes $animation-name {
-    @content;
-  }
+  //@-webkit-keyframes $animation-name {
+  //  @content;
+  //}
+  //@-moz-keyframes $animation-name {
+  //  @content;
+  //}
+  //@keyframes $animation-name {
+  //  @content;
+  //}
 }
 
 // Media queries
