fun页面新增图片

--- a/src/main/resources/templates/fun.html
+++ b/src/main/resources/templates/fun.html
@@ -79,10 +79,10 @@
                         <div class="boto-secudrio"><div class="text-2">View Project</div></div>
                     </div>
                 </div>
-                <img class="pexels-elly" src="https://s3-alpha-sig.figma.com/img/43ae/d2cd/6d1eda697ebdd81b9493257f358f1f41?Expires=1702252800&Signature=IQwuYMC-UpyIL8NP5XQylZAavHUc0aZltHvFCKli9uNHC2w8EQesiFpRnNjTpy4YY-Ys6urU67CnuYmc4hhmo~qtuU40khguJ-bkv3JVVqJMt-rwAHupsFImEExiJptlwB3qNC6UcVnbP52UVWvnrjPkG5eOPdopmPPwZa4sOUlq4jsBNlMzO-5hlPgsel4V0NPubzL152oH2eZrdLJm~fyQ9JAS8i07UANxkJUOcGL4YvReacUsNJZKj0aQ5tUVmwghg-ziR9smlsJROX-NSHgnFUPjwrsU9qm77JpXlHTc~VSQd-iPwK09~OXq3wavfOgGgv7nTNNpzcTlgzl9DA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" />
+                <img class="pexels-elly" src="apps/wenhao-javaw/fun/img.png" />
             </div>
             <div class="project-2">
-                <img class="rectangle-2" src="https://s3-alpha-sig.figma.com/img/f898/a47e/5254b4952e607d1855c993d0faa54f1d?Expires=1702252800&Signature=J0RCMEzWn2IBZWlHxVoIAIrQI~HqCvPu21L91UlrqFEfmLK6JJ~h2OhAgg3zQf5xLV0jer~lyMOg8R1zi9gY4w0L63Qe42pFwNv3zhZIKEhsq9Wi3~tVubpJWDaAXxYERMG0I6mzkvICQyv1WF6OAyrlyG0gpn00AQqYad6oqB~3nzPqjZo17omvo5PpaoX8LN2ERV5EGqOerFw3jccvkCTOsHns3zjPPgE4KdfmOeGLJtd8oOUYdz2k8xglKanmWgz9nyvVK4BF5navnqEQ8u9J~AZv0oZYLrkdj7ZB7RsT597ZyH-A0LkyZ0g6QRda-~OAGMdCv~td2yQjh5YDpg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" />
+                <img class="rectangle-2" src="apps/wenhao-javaw/fun/img_1.png" />
                 <div class="project-nfo">
                     <div class="frame-2">
                         <div class="text-5">Project Name</div>
@@ -101,7 +101,7 @@
                         <div class="boto-secudrio"><div class="text-2">View Project</div></div>
                     </div>
                 </div>
-                <img class="rectangle-2" src="https://s3-alpha-sig.figma.com/img/2707/c65e/c2fc535bf240996f3128eccd66cb11c7?Expires=1702252800&Signature=gK7i4a3wJhbUQSeMydIDYFrpLP5TCO5qrEeUL-NRpKHeiQnMHhsNnVW3XLkWKMW8pMEVaC-attP-ucrJ1Xal1-OA0~BJlJpXiljzC-NqXGcHY0cVn3WBWa8HlYKjASIIP5YiVZ83lYiJ0BIY2O97XwyLH032TphV3UpPuWYV9hdUmPKZ7QdrM2zN70GRy3VAC8MY1GbVmMblocjNIrHQur2HyLJj347mgAoDW7x~s5P1o4px4ug3Cnzi2RY97SNz31c7bfHP0sc5nip8GyH9l0N24HRSSG42ufQexS8hf7r6FgWQBJOn1W9Znixkp5eOHz7zV3Kg2iYax8mWfKHoMw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" />
+                <img class="rectangle-2" src="apps/wenhao-javaw/fun/img_2.png" />
             </div>
         </div>
         <div class="footer-form">
