--- a/src/main/resources/templates/ppvideogeneralobejectdetection.html
+++ b/src/main/resources/templates/ppvideogeneralobejectdetection.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-100 h-screen overflow-hidden">
 <div class="container mx-auto px-4 py-8 h-full flex flex-col">
     <div class="bg-gray-200 p-6 rounded-lg mb-8 overflow-auto">
-        <h2 class="text-lg font-semibold mb-4">该页面为头盔识别算法展示 / Helmet Detection Algorithm</h2>
+        <h2 class="text-lg font-semibold mb-4">general object detection</h2>
     </div>
     <div class="flex-grow flex flex-wrap justify-center items-center">
         <div class="flex flex-col justify-center items-center w-full lg:w-1/2 px-4 mb-4 lg:mb-0">
@@ -22,7 +22,7 @@
         </div>
         <div class="w-full lg:w-1/2 px-4">
             <div class="flex justify-center items-center h-full">
-                <img id="resultImage" src="" alt="Result preview" class="rounded-lg shadow-lg max-h-80 w-auto hidden"/>
+                <img id="resultImage" src="" alt="Result preview" class="rounded-lg shadow-lg w-full h-full object-contain hidden"/>
             </div>
         </div>
     </div>
@@ -51,7 +51,7 @@
             const formData = new FormData();
             formData.append('file', blob, 'frame.jpg');
 
-            fetch('/apps/wenhao-javaw/pphelmetupload', { // Make sure the URL matches your setup
+            fetch('/apps/wenhao-javaw/ppgeneralobjectdetectionupload', { // Make sure the URL matches your setup
                 method: 'POST',
                 body: formData,
             })
@@ -67,6 +67,9 @@
 
     // Call the function at the specified interval (30 times per second)
     setInterval(captureImageAndSend, 1000);
+    //python tools/train.py -c configs/yolov3/yolov3_darknet53_270e_voc.yml --eval -o use_gpu=false
+    //python PaddleDetection/tools/export_model.py -c PaddleDetection/configs/yolov3/yolov3_darknet53_270e_voc.yml --output_dir=./inference_model -o weights=output/yolov3_darknet53_270e_voc/164.pdparams
+
 </script>
 </body>
 </html>
