--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body class="bg-gray-100">
-<div class="flex h-screen">
+<div class="flex">
     <!-- Sidebar -->
     <div class="w-64 bg-white shadow-md">
         <div class="p-6">
