minio管理页面优化

--- a/src/main/resources/templates/minio.html
+++ b/src/main/resources/templates/minio.html
@@ -177,15 +177,15 @@
             })
             .then(url => {
                 if (isImage) {
-                    const newUrl = url.replace('http://10.104.96.59:9000', '/apps/wenhao-javaw/product/file/backend');
+                    // const newUrl = url.replace('http://10.104.96.59:9000', '/apps/wenhao-javaw/product/file/backend');
                     // 如果是图片，显示图片预览
                     const previewContent = document.getElementById('previewContent');
-                    previewContent.innerHTML = `<img src="${newUrl}" alt="File Preview" class="mx-auto" />`; // 显示图片在模态框中
+                    previewContent.innerHTML = `<img src="${url}" alt="File Preview" class="mx-auto" />`; // 显示图片在模态框中
                     document.getElementById('previewModal').classList.remove('hidden');
                 } else {
-                    const newUrl = url.replace('http://10.104.96.59:9000', '/apps/wenhao-javaw/product/file/backend');
+                    // const newUrl = url.replace('http://10.104.96.59:9000', '/apps/wenhao-javaw/product/file/backend');
                     // 如果不是图片，触发下载
-                    window.location.href = newUrl; // 这会导致浏览器导航到该URL，触发下载
+                    window.location.href = url; // 这会导致浏览器导航到该URL，触发下载
                 }
             })
             .catch(error => {
