--- a/src/main/resources/templates/minio.html
+++ b/src/main/resources/templates/minio.html
@@ -152,7 +152,7 @@
                     const previewButton = document.createElement('button');
                     previewButton.textContent = 'Preview';
                     previewButton.addEventListener('click', () => previewFile(file));
-                    previewButton.className = "ml-2 bg-purple-500 hover:bg-purple-700 text-white font-bold py-1 px-2 rounded";
+                    previewButton.className = "ml-2 bg-purple-500 hover:bg-purple-700 text-white font-bold py-1 px-2 rounded my-2";
 
                     li.appendChild(previewButton);
                     fileList.appendChild(li);
