--- a/src/main/resources/templates/flowManagement.html
+++ b/src/main/resources/templates/flowManagement.html
@@ -340,6 +340,18 @@
                     "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/llm' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
             },
             {
+                "name": "grafana",
+                "description": "监控",
+                "type": "基础应用",
+                "edges": 1,
+                "cores": 2,
+                "apps": 1,
+                "updateTime": "25/01/2024",
+                "createTime": "25/01/2024",
+                "actions": "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
+                    "<a href='https://demo.unibutton.com:8443/grafana' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
+            },
+            {
                 "name": "3dScene",
                 "description": "多窗口同步",
                 "type": "静态页面展示",
