--- a/src/main/resources/templates/flowManagement.html
+++ b/src/main/resources/templates/flowManagement.html
@@ -72,9 +72,9 @@
                     </a>
                 </li>
             </ul>
-            <a href="#" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-200">
+            <a href="http://47.236.10.165:8080/apps/wenhao-javaw/lottomanagement" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-200">
                 <i class="fas fa-network-wired mr-3 w-[1rem]"></i>
-                Edge Management
+                Lotto Management
             </a>
             <a href="#" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-200">
                 <i class="fas fa-microchip mr-3 w-[1rem]"></i>
@@ -422,6 +422,18 @@
                 "createTime": "25/01/2024",
                 "actions": "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
                     "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/survey' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
+            },
+            {
+                "name": "Lotto",
+                "description": "大乐透管理",
+                "type": "综合系统展示",
+                "edges": 1,
+                "cores": 2,
+                "apps": 1,
+                "updateTime": "25/01/2024",
+                "createTime": "25/01/2024",
+                "actions": "<a href='#' class='edit-btn text-indigo-600 hover:text-indigo-900'>Edit</a> <span style='margin-left: 8px;'>" +
+                    "<a href='http://47.236.10.165:8080/apps/wenhao-javaw/lottomanagement' target='_blank' class='open-btn text-gray-600 hover:text-gray-900'><i class='fas fa-external-link-alt'></i></a></span>"
             },
             {
                 "name": "suposai",
