--- a/src/main/resources/templates/lottoManagement.html
+++ b/src/main/resources/templates/lottoManagement.html
@@ -138,7 +138,7 @@
                         Result
                     </th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                        Email
+                        Mail
                     </th>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                         Time
