--- a/src/main/resources/templates/videoppocr.html
+++ b/src/main/resources/templates/videoppocr.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OCR Video Demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.x/dist/tailwind.min.css" rel="stylesheet">
+    <link href="apps/wenhao-javaw/output.css" rel="stylesheet">
+    <!--    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.x/dist/tailwind.min.css" rel="stylesheet">-->
     <style>
         .hidden {
             display: none;
