--- a/src/main/resources/templates/minio.html
+++ b/src/main/resources/templates/minio.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minio File Manager</title>
     <!-- Include Tailwind CSS from CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="apps/wenhao-javaw/output.css" rel="stylesheet">
+    <!--    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">-->
 </head>
 <body class="bg-gray-50">
 <div class="container mx-auto px-4 py-8">
