--- a/src/main/resources/templates/lottoManagement.html
+++ b/src/main/resources/templates/lottoManagement.html
@@ -29,7 +29,7 @@
     </div>
     <div class="relative">
         <input class="bg-gray-100 text-sm text-gray-700 rounded-md pl-10 py-1 focus:outline-none focus:ring-2 focus:ring-gray-200 w-96" placeholder="Search" type="text"/>
-        <span class="absolute left-2 top-0 mt-2 ml-2 text-gray-400">
+        <span class="absolute left-2 top-0 mt-1 ml-2 text-gray-400">
             <i class="fas fa-search"></i>
         </span>
     </div>
@@ -175,7 +175,7 @@
                 <!-- Lottery period input -->
                 <input id="lotteryPeriod" type="text" placeholder="Lottery Period" class="mt-2 px-3 py-2 border rounded-md w-full" />
                 <!-- Lottery numbers input -->
-                <textarea id="lotteryNumbers" placeholder="Lottery Numbers" class="mt-2 px-3 py-2 border rounded-md w-full" rows="5"></textarea>
+                <textarea id="lotteryNumbers" placeholder='请输入彩票号码，格式如下：[["08","17","19","24","28","01","02"]]' class="mt-2 px-3 py-2 border rounded-md w-full" rows="5"></textarea>
             </div>
             <!-- Buttons below the text inputs -->
             <div class="items-center px-4 py-3">
