--- a/src/main/resources/templates/flowManagement.html
+++ b/src/main/resources/templates/flowManagement.html
@@ -73,7 +73,7 @@
                     </a>
                 </li>
             </ul>
-            <a href="http://47.236.10.165:8080/apps/wenhao-javaw/lottomanagement" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-200">
+            <a href="/apps/wenhao-javaw/lottomanagement" class="flex items-center px-6 py-3 text-gray-700 hover:bg-gray-200">
                 <i class="fas fa-network-wired mr-3 w-[1rem]"></i>
                 Lotto Management
             </a>
