--- a/src/main/resources/templates/lottoManagement.html
+++ b/src/main/resources/templates/lottoManagement.html
@@ -173,6 +173,7 @@
                     <option value="Crystal">Crystal</option>
                     <option value="Zhanzhan">Zhanzhan</option>
                     <option value="Shimu">Shimu</option>
+                    <option value="Simon">Simon</option>
                 </select>
                 <!-- Lottery period input -->
                 <input id="lotteryPeriod" type="text" placeholder="Lottery Period" class="mt-2 px-3 py-2 border rounded-md w-full" />
